get rid of warnings

--- a/plugins/gui/frontend/gosa/config.json
+++ b/plugins/gui/frontend/gosa/config.json
@@ -45,7 +45,8 @@
       "libraries",
       "common",
       "source",
-      "lint"
+      "lint",
+      "test-source"
     ],
     "exclude" :
     [
