--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ before_install:
   - sudo cp ./configs/test_conf/config /etc/gosa/
   - sudo chown -R travis:travis /tmp/gosa
 install:
-  - sudo apt-get install libcups2-dev libdbus-1-dev libdbus-glib-1-dev libusb-1.0-0-dev libudev-dev libgirepository1.0-dev
+  - sudo apt-get install libcups2-dev libdbus-1-dev libdbus-glib-1-dev libusb-1.0-0-dev libudev-dev libgirepository1.0-dev python3-dnspython
   - virtualenv --python=python3.6 --system-site-packages .env
   - source .env/bin/activate
   - pip install --upgrade pip # upgrade pip, we need the latest version
@@ -53,6 +53,7 @@ before_script:
     - export PYENV_VERSION=3.6-dev
     # setup GOsa, install deps...
     - ./setup.py develop
+    - find .env/ -name dnspython*
 script:
     # finally run the tests, with running dbus
     - export ASYNC_TEST_TIMEOUT=10
