--- a/packaging/debian/control
+++ b/packaging/debian/control
@@ -3,7 +3,8 @@ Section: misc
 Priority: optional
 Maintainer: Cajus Pollmeier <pollmeier@gonicus.de>
 Build-Depends: debhelper (>= 9), dh-python, python3-all, python3-setuptools,
- python3-pytest, pylint3, python3-babel
+ python3-pytest, pylint3, python3-babel, python3-pytest-runner,
+ python3-pyinotify, python3-polib, python3-bcrypt
 X-Python-Version: >= 3.5
 Standards-Version: 3.9.2
 Homepage: http://gosa-project.org
@@ -13,7 +14,7 @@ Vcs-Git: git://github.com/gonicus/gosa.git
 Package: gosa-common
 Architecture: all
 Depends: ${python:Depends}, ${misc:Depends}, python3-pkg-resources,
- python3-zope.interface, python3-openssl, python3-sqlalchemy, python3-lxml,
+ python3-zope.interface, python3-openssl, python3-sqlalchemy (>= 1.1), python3-lxml,
  python3-dnspython, python3-cryptography, python3-colorlog, python3-mqtt,
  gosa-dbus
 Description: gosa infrastructure service - common files
@@ -24,7 +25,7 @@ Description: gosa infrastructure service - common files
 Package: gosa-dbus
 Architecture: all
 Depends: ${python:Depends}, ${misc:Depends}, gosa-common, python3-dateutil,
- python3-dbus, python3-setproctitle, supervisor, python3-pyinotify
+ python3-dbus, python3-setproctitle, python3-pyinotify, python3-polib, python3-xdg
 Description: GOsa infrastructure service - DBUS service provider
  Brief description is missing.
  .
@@ -35,8 +36,8 @@ Architecture: all
 Conflicts: gosa-server
 Depends: ${python:Depends}, ${misc:Depends}, gosa-common, python3-dateutil,
  python3-netifaces, python3-netaddr, python3-crypto, python3-zope.event,
- python3-setproctitle, adduser, supervisor, python3-babel, python3-tornado,
- fusioninventory-agent
+ python3-setproctitle, adduser, python3-babel (>= 2.4), python3-tornado,
+ fusioninventory-agent, python3-decorator
 Suggests: gosa-dbus
 Description: GOsa infrastructure service - client
  Brief description is missing.
@@ -46,7 +47,7 @@ Description: GOsa infrastructure service - client
 Package: gosa-cli
 Architecture: all
 Depends: ${python:Depends}, ${misc:Depends}, gosa-common, python3-pycurl,
- python3-u2flib-host, python3-pyqrcode
+ python3-u2flib-host, python3-pyqrcode, python3-hidraw
 Description: GOsa infrastructure service - shell
  Brief description is missing.
  .
@@ -66,7 +67,7 @@ Depends: ${python:Depends}, ${misc:Depends}, gosa-common, python3-tornado,
  python3-unidecode, python3-zope.event, python3-pil, python3-passlib,
  python3-psycopg2, python3-mqtt, python3-cryptography, python3-pyqrcode,
  python3-pycountry, python3-ldap, python3-u2flib-server,
- python3-tornadostreamform, adduser, supervisor
+ python3-tornadostreamform, adduser
 Conflicts: gosa-client
 Suggests: mosquitto, avahi-utils
 Description: GOsa infrastructure service - agent
