add more translations, fix some typos and settings

--- a/plugins/syncrepl/setup.cfg
+++ b/plugins/syncrepl/setup.cfg
@@ -2,21 +2,21 @@
 test=pytest
 
 [extract_messages]
-output_file = src/gosa/plugins/gui/locale/messages.pot
+output_file = src/gosa/plugins/syncrepl/locale/messages.pot
 copyright_holder = GONICUS GmbH
 msgid_bugs_address = gosa@oss.gonicus.de
 keywords = _ ngettext:1,2 N_
 add_comments = TRANSLATOR:
 strip_comments = 1
-input_dirs = src/gosa/plugins/gui
+input_dirs = src/gosa/plugins/syncrepl
 
 [init_catalog]
-output_dir = src/gosa/plugins/gui/locale
-input_file = src/gosa/plugins/gui/locale/messages.pot
+output_dir = src/gosa/plugins/syncrepl/locale
+input_file = src/gosa/plugins/syncrepl/locale/messages.pot
 
 [compile_catalog]
-directory = src/gosa/plugins/gui/locale
+directory = src/gosa/plugins/syncrepl/locale
 
 [update_catalog]
-output_dir = src/gosa/plugins/gui/locale
-input_file = src/gosa/plugins/gui/locale/messages.pot
+output_dir = src/gosa/plugins/syncrepl/locale
+input_file = src/gosa/plugins/syncrepl/locale/messages.pot
