translate objects displayName and use it in the GUI

--- a/backend/mapping.cfg
+++ b/backend/mapping.cfg
@@ -7,5 +7,5 @@ gosa-templates = gosa.common.babel_extract:extract_template_json
 [gosa-templates: **/templates/*.json]
 
 [gosa-objects: **/data/objects/*.xml]
-paths = //o:Attributes/o:Attribute/o:Values/o:Value
+paths = //o:Attributes/o:Attribute/o:Values/o:Value //o:Object/o:DisplayName
 namespaces = {"o": "http://www.gonicus.de/Objects"}
