--- a/.travis.yml
+++ b/.travis.yml
@@ -34,12 +34,12 @@ before_install:
   - sudo cp ./configs/test_conf/config /etc/gosa/
   - sudo chown -R travis:travis /tmp/gosa
 install:
-  - sudo apt-get install libcups2-dev libdbus-1-dev libdbus-glib-1-dev libusb-1.0-0-dev libudev-dev libgirepository1.0-dev
+  - sudo apt-get install libcups2-dev libdbus-1-dev libdbus-glib-1-dev libusb-1.0-0-dev libudev-dev libgirepository1.0-dev python3-pyasn1
   - virtualenv --python=python3.6 --system-site-packages .env
   - source .env/bin/activate
   - pip install --upgrade pip # upgrade pip, we need the latest version
   - pip install setproctitle pylint tornado coveralls 'pytest>=2.9' hidraw-pure decorator syncrepl-client
-  - ls -la .env/lib/python3.6/site-packages/syncrepl_client-0.95.1.dist-info/
+  - find .env/ | grep requires.txt | grep syncrepl
 #  - echo -e "pyasn1>=0.2.2\npyldap>=2.4.37" > .env/lib/python3.6/site-packages/syncrepl_client-0.95.1-py3.6.egg/EGG-INFO/requires.txt
 #  - cat .env/lib/python3.6/site-packages/syncrepl_client-0.95.1-py3.6.egg/EGG-INFO/requires.txt
   #- pip install -e git+https://git.gnome.org/browse/pygobject#egg=pygobject==3.24
